<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050000"
    tools:context=".MoviePostActivity">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/postImage"
        android:layout_width="151dp"
        android:layout_height="176dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="#926CD5"
        android:text="Cancel"
        android:textColor="#020000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/postTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Title:"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/PostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/postTitleLabel"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/postReviewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:shadowColor="#FDFCFC"
        android:text="Type Review: "
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/postTitleLabel"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp" />

    <EditText
        android:id="@id/inputBox"
        android:layout_width="386dp"
        android:layout_height="179dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#F6F4F4"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"
        android:shadowColor="#F8F5F5"
        app:layout_constraintTop_toBottomOf="@+id/postReviewLabel"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#926CD5"
        android:text="Post"
        android:textColor="#040000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postStar3" />

    <ImageButton
        android:id="@+id/postStar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#040000"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBox" />

    <ImageButton
        android:id="@+id/postStar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#040000"
        android:src="@android:drawable/btn_star_big_off"
        app:layout_constraintStart_toEndOf="@+id/postStar1"
        app:layout_constraintTop_toBottomOf="@+id/inputBox" />

    <ImageButton
        android:id="@+id/postStar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#040000"
        android:src="@android:drawable/btn_star_big_off"
        app:layout_constraintStart_toEndOf="@+id/postStar2"
        app:layout_constraintTop_toBottomOf="@+id/inputBox" />

    <ImageButton
        android:id="@+id/postStar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#040000"
        android:src="@android:drawable/btn_star_big_off"
        app:layout_constraintStart_toEndOf="@+id/postStar3"
        app:layout_constraintTop_toBottomOf="@+id/inputBox" />

    <ImageButton
        android:id="@+id/postStar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#040000"
        android:src="@android:drawable/btn_star_big_off"
        app:layout_constraintStart_toEndOf="@+id/postStar4"
        app:layout_constraintTop_toBottomOf="@+id/inputBox" />

</androidx.constraintlayout.widget.ConstraintLayout>