...
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toEndOf="@+id/OverviewLabel"
        app:layout_constraintTop_toBottomOf="@+id/ReleaseDateLabel"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/createPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#926CD5"
...
